--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/hy.common.base"/>
 	<classpathentry kind="lib" path="lib/javax.mail.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="lib/xjava.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/XJava"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
