--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hy.common.base"/>
-	<classpathentry kind="lib" path="lib/javax.mail.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/XJava"/>
+	<classpathentry kind="lib" path="lib/javax.mail-1.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
