--- a/src/META-INF/maven/org/hy/common/mail/pom.xml
+++ b/src/META-INF/maven/org/hy/common/mail/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>hy.common.mail</name>
-  <url>https://github.com/HY-ZhengWei/hy.common.mail</url>
+  <url>https://github.com/HY-ZhengWei/hy.common.mail</url>   <!-- https://gitee.com/HY-ZhengWei/hy.common.mail -->
   
   <developers>
     <developer>
@@ -32,17 +32,18 @@
     </dependency>
     
     <!-- https://github.com/HY-ZhengWei/hy.common.base -->
-	<dependency>
-	    <groupId>org</groupId>
-	    <artifactId>hy.common.base</artifactId>
-	    <version>1.0.148</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>com.sun.mail</groupId>
-	    <artifactId>javax.mail</artifactId>
-	    <version>1.6.0</version>
-	</dependency>
-	
+    <!-- https://gitee.com/HY-ZhengWei/hy.common.base -->
+    <dependency>
+        <groupId>org</groupId>
+        <artifactId>hy.common.base</artifactId>
+        <version>1.0.156</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.0</version>
+    </dependency>
+    
   </dependencies>
 </project>
